--- a/css/clone-web.css
+++ b/css/clone-web.css
@@ -11,6 +11,7 @@ ul,nav{
     cursor: pointer;
     color:#fff;
     font-size: 18px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 ul li:hover a{
     color: tomato;
@@ -67,6 +68,7 @@ ul li:hover a{
     cursor: pointer;
     color:#246a4e;
     font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
 .header2 nav ul{
@@ -99,6 +101,7 @@ header nav li:last-child{
 .banner-area h1{
     font-size:72px;
     font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     margin-bottom: 47px;
     color: #fff;
@@ -110,6 +113,7 @@ header nav li:last-child{
 }
 .banner-area{
     width: 100%;
+    height:100%;
     display: -webkit-box-flex;
     display: -moz-flex;
     display: -ms-flex;
@@ -123,16 +127,15 @@ header nav li:last-child{
     /* z-index:100; */
     margin-bottom:50px;    
 }
-.banner-area .bg-img{
-    opacity: 0.5;
-}
 .help{
     margin-bottom: 150px;
 }
 .help h2{
     text-align: center;
     font-size:50px;
-    color:rgb(22, 18, 18);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    color:#fff;
+    width: 100%;
 }
 .dollar-img{
     display: flex;
@@ -164,6 +167,7 @@ header nav li:last-child{
     text-align: center;
     font-size: 50px;
     margin-bottom:100px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .role-nav{
     display: flex;
@@ -198,6 +202,7 @@ header nav li:last-child{
 }
 .business-img .busi-img{
     width:35%;
+    list-style-type: style great;
 }
 
 /* .business-img button{
@@ -208,7 +213,7 @@ header nav li:last-child{
 */
 .business-img nav{
     width:36%;
-    background-color:#465851;
+    background-color:#246a4e;
     padding:16px 11px;
     cursor: pointer;
     text-align: center;
@@ -247,6 +252,13 @@ article div{
     box-shadow:0 0 2px;
     width: 30%;
 }
+article ul span{
+    color:#24694e;
+    font-weight: bolder;
+}
+article ul{
+    margin-bottom: 55px;
+}
 article h1{
     text-align: center;
     padding-top:15px;
@@ -262,34 +274,162 @@ article p a{
     text-decoration: none;
     line-height:none;
 }
-mark{
+mark > .diagrams{
     display: flex;
-    
-    background-color:#fff;
-    
-    /* padding:20px 300px; */
+    padding: 0 15px;
+    width: 100%;
+    justify-content: center;
 }
-mark ul li{
+.diagrams{
+    width: 100%;
+    margin: 10px 5px;
+}
+.diagram img{
+    width: 140%;
+}
+.diagrams > .diagram{
+    width:50%;
+    margin-left: 120px;
+}
+.diagram-content{
+    
+}
+.diagrams > .diagram-content{
+    padding:50px 70px;
+    margin-left:100px;
+}
+.diagram-content p{
+    line-height:23px;
+    font-size:20px;
+    justify-content:center;
+    padding-bottom: 25px;
+}
+/* mark ul li{
     justify-content: space-evenly;
     border: 1px #246a4e solid;
     
-}
-mark img{
-    width: 35%;
-}
+} */
+
 /* mark div{
     width: 60%;
 } */
-mark .diagram{
+
+footer{
+    background:#24694e;
+    padding: 20px 25px;
+}
+footer > .footer1{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+.footer1 p{
+    color: #fff;
+    line-height:27px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.footer1 h3{
+    color: #fff;
+    margin-bottom: 20px;
+}
+footer > .footer2{
+    display: flex;
+    justify-content: space-between;
+}
+.footer-social ul{
+    display: flex;
+    padding:17px 0;
     
 }
-mark .diagram-content{
-    width: 60%;
-} 
-footer{
-    display:flex;
-    background: #246a4e;
+.footer-social ul a{
+    padding:0 17px;
 }
+.footer-social i{
+    color: #fff;
+}
+.terms-privacy ul{
+    display: flex;
+}
+.terms-privacy ul a{
+    color:#fff;
+    text-decoration: none;
+    padding:0 5px;
+}
+.copy{
+    color:#fff;
+}
+.review span{
+    color: red;
+}
+
+.contact{
+    display:flex;
+    background-image:url("../images/bg2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width:100%;
+    justify-content:space-around;
+    margin-top:100px;
+}
+.contact .contact-info1{
+    width:50%;
+    
+    padding:0 50px;
+}
+.contact .contact-info{
+    width:50%;
+}
+
+    input[type=text],[type=email]{
+        width:90%;
+        align-items: center;
+        padding:12px 10px;
+        margin:8px 0;
+        margin-left: 35px;
+        display: inline-block;
+        border-radius:5px;
+    }
+    textarea{
+        width: 90%;
+        height: 170px;
+        align-items: center;
+        padding:12px 10px;
+        margin: 8px 0;
+        margin-left: 35px;
+        display: inline-block;
+        border-radius:5px;
+    }
+    input[type=submit]{
+        box-shadow:0 0 0 0;
+        width:90%;
+        text-align: center;
+        background:#24694e;
+        color:#fff;
+        margin-bottom:15px;
+        padding: 12px 0;
+        margin-left:35px;
+        border-radius:5px;
+    }
+    .contact-info ul{
+        width: 90%;
+        background: #fff;
+        padding:12px 10px;
+        margin-left: 35px;
+        margin-bottom: 10px;
+        border-radius:5px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
